          --nostd        use --no-builtin-rcfile
          --reallyquiet  use --quiet --quiet
          --debug        use --verbose

        - To aid command line typing, partial option names are tried to
          be expanded; if the expansion leads to multiple possibilities,
          all matches and an accompanying short description of the
          particular expansion are displayed.

        - New automate commands 'put_public_key', 'get_public_key' and
          'drop_public_key'. (closes monotone bug #30345)

        - The 'disapprove' command now accepts a revision range in
          addition to a single revision.

        - A new 'manpage' command has been added which dumps the monotone
          command help including all global and command specific options in
          standard troff format.  If this command is used interactively, its
          output is automatically processed through nroff and less, in case 
          both are available on your system.  If not, you can change the default
          command by overwriting the 'get_man_page_formatter_command' hook.

          The 'manpage' command is also used to create a static version of
          mtn(1) which is now installed with the rest of monotone's docs.

        - New 'k:' selector type to query revisions where at least one
          certificate was signed with the given key.

        - New automation command 'log' which behaves identical to the
          normal 'log' command, except that it only outputs the
          revision ids.

        Bugs fixed

        - The 'mv' command now warns when a source is being renamed onto
          itself or one of its children (fixes monotone bug #29484).

        - The 'mv' command now handles this usage properly, where
          'foo' is a directory:
          mv foo bar
          mtn mv --bookkeep-only foo bar

        - monotone no longer asks to pick a branch from a set of branches
          of a revision in which all but one branch have been suspended